syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = ".;pb";

message SignedData {
    bytes data = 1;
    bytes signature = 2;
}

message RefreshToken {
    bytes key = 1;
    google.protobuf.Timestamp issue_time = 2;
    string user_id = 3;
    string user_email = 4;
    bytes client_id = 5;
    google.protobuf.Timestamp expire_time = 6;
}

message Code {
    bytes key = 1;
    bytes secret = 2;
    string user_id = 3;
    string user_email = 4;
    google.protobuf.Timestamp expire_time = 5;
}

message AccessToken {
    string client_id = 1;
    string user_id = 2;
    string user_email = 3;
    google.protobuf.Timestamp issue_time = 4;
    google.protobuf.Timestamp expire_time = 5;
}

message AuthorizeCookie {
    string rp_state = 1;
    string client_state = 2;
    string client_id = 3;
    string redirect_uri = 4;
    string nonce = 5;
    string code_challenge = 6;
    string response_mode = 7;
    google.protobuf.Timestamp expire_time = 8;
}
